add user cookies and Auth system
